"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2012-07-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-91-prsim-engine-rewrite-07:
	  hacprsim: completely rewrite force-exclusive ring (mk_excl)
		no longer maintain excl-queues, instead use the set
		of updated_nodes along with a blocking-set that
		overrides node events by forcing pull status changes,
		and cancelling pending events.
		For this revision, events cancelled due to mk_excl
		are diagnosed as instabilities.
		Next revision may change this to original behavior
		of silently dequeuing blocked event.
		New implementation controlled by switch:
			PRSIM_MK_EXCL_BLOCKING_SET.


2012-07-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86:
	  HAC: added string comparison operator support.
		object binary format version bumped to 10.
		Test cases added, documentation updated.


2012-07-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-40-prsim-power-supply-03:
	  hacprsim: dynamic power supplies now properly use the 
		supply associated with each defined internal node.
	  Merged to master.


2012-07-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-40-prsim-power-supply-02:
	  hacprsim: on startup, set !Vdd and !GND as initial events 
		in the event queue, so their fanout gets processed.


2012-07-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-40-prsim-power-supply-01:
	  hacprsim: added options to model dynamic power/ground supplies
		by adding terms to the production rules (ExprAlloc).
		TODO: properly handle internal nodes' supplies.


2012-06-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-40:
	 vpi-prsim: force transport delays from prsim to vcs to be zero,
		instead of calculating a time difference (floating-point sub.)