@@ -3,7 +3,7 @@ Trace file contents: 3 epochs.
 	epoch	index	time	offset	size
 	0	0	0	#SIZE#	#SIZE#
 	1	0	0	#SIZE#	#SIZE#
-	2	21	0	#SIZE#	#SIZE#
+	2	23	0	#SIZE#	#SIZE#
 Epoch 0: (initial values)
 X 0 1 X X X X 
 Epoch 1:
@@ -17,18 +17,20 @@ Epoch 1:
 	5	10	0	0	3	0	(a:0)
 	6	10	0	0	4	0	(b:0)
 	7	20	2	5	5	1	[after 10]	~a -> x+
-	8	20	0	0	3	1	(a:1)
-	9	30	1	8	5	0	[after 10]	a -> x-
-	10	40	0	9	6	1	(y:1)
-	11	40	0	0	4	1	(b:1)
-	12	50	3	11	6	0	[after 10]	b -> y-
-	13	50	0	0	4	0	(b:0)
-	14	50	0	0	3	0	(a:0)
-	15	60	4	13	6	1	[after 10]	~b -> y+
-	16	60	0	0	4	1	(b:1)
-	17	70	3	16	6	0	[after 10]	b -> y-
-	18	80	0	17	5	1	(x:1)
-	19	80	0	0	3	1	(a:1)
-	20	90	1	19	5	0	[after 10]	a -> x-
+	8	20	4	6	6	X	[after 10]	~b -> y+
+	9	20	0	0	3	1	(a:1)
+	10	30	1	9	5	0	[after 10]	a -> x-
+	11	40	0	10	6	1	(y:1)
+	12	40	0	0	4	1	(b:1)
+	13	50	3	12	6	0	[after 10]	b -> y-
+	14	50	0	0	4	0	(b:0)
+	15	50	0	0	3	0	(a:0)
+	16	60	4	14	6	1	[after 10]	~b -> y+
+	17	60	2	15	5	X	[after 10]	~a -> x+
+	18	60	0	0	4	1	(b:1)
+	19	70	3	18	6	0	[after 10]	b -> y-
+	20	80	0	19	5	1	(x:1)
+	21	80	0	0	3	1	(a:1)
+	22	90	1	21	5	0	[after 10]	a -> x-
 Epoch 2: (final values)
 X 0 1 1 1 0 0 
