@@ -1,8 +1,9 @@
-# "excl-rings-03.prsimrc"
+# "excl-rings-03c.prsimrc"
 #	$Id: excl-rings-03.prsimrc,v 1.3 2010/04/06 00:06:25 fang Exp $
 # @haco@ excl-rings.haco-c
 # testing excl rings features
 
+excl-unstable ignore
 watchall
 
 set a 1
